--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
   ],
   "dependencies": {
     "@braid/vue-formulate": "^2.5.2",
-    "@bryntum/taskboard": "5.6.10",
-    "@bryntum/taskboard-vue": "^5.6.10",
     "@chatwoot/prosemirror-schema": "1.0.5",
     "@chatwoot/utils": "^0.0.23",
     "@hcaptcha/vue-hcaptcha": "^0.3.2",
@@ -47,6 +45,7 @@
     "@sindresorhus/slugify": "1.1.0",
     "@syncfusion/ej2-vue-base": "^25.1.35",
     "@syncfusion/ej2-vue-kanban": "^25.1.42",
+    "@syncfusion/ej2-vue-buttons": "^25.2.3",
     "@tailwindcss/typography": "^0.5.9",
     "activestorage": "^5.2.6",
     "autoprefixer": "^10.4.14",
@@ -119,6 +118,7 @@
     "@types/jest": "^29.5.2",
     "@vue/test-utils": "^1.3.6",
     "@vue/vue2-jest": "29",
+    "@vue/composition-api": "1.7.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "29",
