--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@sindresorhus/slugify": "1.1.0",
     "@syncfusion/ej2-vue-base": "^25.1.35",
     "@syncfusion/ej2-vue-kanban": "^25.1.42",
+    "@syncfusion/ej2-vue-schedule": "^25.2.3",
     "@tailwindcss/typography": "^0.5.9",
     "activestorage": "^5.2.6",
     "autoprefixer": "^10.4.14",
