feat: Adiciona campo de busca

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@syncfusion/ej2-vue-kanban": "^25.1.42",
     "@syncfusion/ej2-vue-buttons": "^25.2.3",
     "@syncfusion/ej2-vue-schedule": "^25.2.3",
+    "@syncfusion/ej2-vue-inputs": "^25.2.3",
+    "@syncfusion/ej2-vue-dropdowns": "^25.2.4",
+    "@syncfusion/ej2-data": "^25.2.3",
     "@tailwindcss/typography": "^0.5.9",
     "activestorage": "^5.2.6",
     "autoprefixer": "^10.4.14",
