[feat]; Modals / Calendário (#4)
* [feat]; Modals / Calendário

* fix

--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "@sentry/tracing": "^6.19.7",
     "@sentry/vue": "^6.19.7",
     "@sindresorhus/slugify": "1.1.0",
+    "@syncfusion/ej2-data": "^25.2.3",
     "@syncfusion/ej2-vue-base": "^25.2.4",
     "@syncfusion/ej2-vue-buttons": "^25.2.4",
-    "@syncfusion/ej2-vue-kanban": "^25.2.3",
-    "@syncfusion/ej2-vue-schedule": "^25.2.3",
-    "@syncfusion/ej2-vue-inputs": "^25.2.3",
+    "@syncfusion/ej2-vue-calendars": "^25.2.5",
     "@syncfusion/ej2-vue-dropdowns": "^25.2.4",
-    "@syncfusion/ej2-data": "^25.2.3",
+    "@syncfusion/ej2-vue-grids": "^25.2.6",
+    "@syncfusion/ej2-vue-inputs": "^25.2.3",
+    "@syncfusion/ej2-vue-kanban": "^25.2.3",
+    "@syncfusion/ej2-vue-navigations": "^25.2.6",
+    "@syncfusion/ej2-vue-schedule": "^25.2.3",
     "@tailwindcss/typography": "^0.5.9",
     "activestorage": "^5.2.6",
     "autoprefixer": "^10.4.14",
@@ -76,6 +79,7 @@
     "postcss": "^8.4.31",
     "postcss-loader": "^4.2.0",
     "semver": "7.5.3",
+    "strip-ansi": "^6.0.1",
     "tailwindcss": "^3.3.2",
     "turbolinks": "^5.2.0",
     "url-loader": "^2.0.0",
