--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "date-fns": "2.21.1",
     "date-fns-tz": "^1.3.3",
     "dompurify": "2.2.7",
+    "eslint-plugin-cypress": "^3.3.0",
     "highlight.js": "~10.4.1",
     "idb": "^7.1.1",
     "ionicons": "~2.0.1",
@@ -143,7 +144,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-storybook": "^0.6.14",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint-plugin-vue": "^9.27.0",
     "expect-more-jest": "^2.4.2",
     "fake-indexeddb": "^4.0.1",
     "husky": "^7.0.0",
