Feat: Schedule on Conversation

--- a/package.json
+++ b/package.json
@@ -44,18 +44,18 @@
     "@sentry/vue": "^6.19.7",
     "@sindresorhus/slugify": "1.1.0",
     "@syncfusion/ej2-cldr-data": "^26.1.35",
-    "@syncfusion/ej2-data": "^25.2.3",
-    "@syncfusion/ej2-vue-base": "^25.2.4",
-    "@syncfusion/ej2-vue-buttons": "^25.2.4",
-    "@syncfusion/ej2-vue-calendars": "^25.2.5",
-    "@syncfusion/ej2-vue-dropdowns": "^25.2.4",
-    "@syncfusion/ej2-vue-grids": "^25.2.6",
-    "@syncfusion/ej2-vue-inputs": "^25.2.3",
-    "@syncfusion/ej2-vue-kanban": "^25.2.3",
+    "@syncfusion/ej2-data": "^26.2.5",
+    "@syncfusion/ej2-vue-base": "^26.2.5",
+    "@syncfusion/ej2-vue-buttons": "^26.2.5",
+    "@syncfusion/ej2-vue-calendars": "^26.2.5",
+    "@syncfusion/ej2-vue-dropdowns": "^26.2.5",
+    "@syncfusion/ej2-vue-grids": "^26.2.5",
+    "@syncfusion/ej2-vue-inputs": "^26.2.5",
+    "@syncfusion/ej2-vue-kanban": "^26.2.5",
     "@syncfusion/ej2-vue-lists": "^26.2.5",
-    "@syncfusion/ej2-vue-navigations": "^25.2.6",
-    "@syncfusion/ej2-vue-schedule": "^25.2.3",
-    "@syncfusion/ej2-vue-treegrid": "^26.1.35",
+    "@syncfusion/ej2-vue-navigations": "^26.2.5",
+    "@syncfusion/ej2-vue-schedule": "^26.2.5",
+    "@syncfusion/ej2-vue-treegrid": "^26.2.5",
     "@tailwindcss/typography": "^0.5.9",
     "activestorage": "^5.2.6",
     "autoprefixer": "^10.4.14",
@@ -162,6 +162,7 @@
     "prettier": "^3.0.3",
     "rimraf": "^3.0.0",
     "size-limit": "^8.2.4",
+    "systemjs-plugin-json": "^0.3.0",
     "webpack-dev-server": "^3"
   },
   "engines": {
